--- a/templates/account/auth/signup.html
+++ b/templates/account/auth/signup.html
@@ -11,7 +11,7 @@
 
 	<div class="container-fluid">
         <div class="row">
-            <div class="col-md-6 view">
+            <div class="col-md-6 view mt-5">
                 <img src="{% static 'res/vector/logo_wb_t.svg' %}">
                 <h1 class="text-white text-center mt-3">Meet your needs</h1>
             </div>
