--- a/static/css/generic/card.css
+++ b/static/css/generic/card.css
@@ -1,7 +1,7 @@
 .card-container {
 	position: relative; display: inline-block; overflow: hidden;
 	background-color: #000; color: #fff;
-	text-align: left; font-size: 13px; margin: 5px;
+	text-align: left; font-size: 13px;
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.25);
 }
 
@@ -63,11 +63,11 @@
 
 
 .slider-card {
-	min-width: 280px; max-width: 300px; width: 100%; height: 320px;
+	margin: 5px; width: 300px;  height: 320px;
 }
 
 .slider-card img {
-	max-width: 100%; height: 100%; vertical-align: top;
+	width: 100%; height: 100%; vertical-align: top; 
 }
 
 
@@ -81,6 +81,7 @@
 
 
 .category-card {
+	margin: 5px;
 	min-width: 280px; max-width: 300px; width: 100%; height: 300px;
 	box-shadow: 0px 0px 0px rgba(0,0,0,0); background-color: #fff;
 }
