--- a/templates/space/product/create.html
+++ b/templates/space/product/create.html
@@ -77,7 +77,7 @@
                 </form>
             </div>
             <div class="col-md-6 view mt-3">
-                <h1 class="text-white text-center">Express your own products</h1>
+                <p class="text-white text-center display-4">Express your own products</p>
                 <img src="{% static 'res/vector/shopper-with-bags.svg' %}">
             </div>
             
