--- a/templates/home/pages/about.html
+++ b/templates/home/pages/about.html
@@ -4,26 +4,39 @@
 {% block extra_head %}
 	<title>About Sakkhat</title>
 	<style type="text/css">
-		.block article {
-			font-family: monospace; font-size: 25px; padding: 5px; line-height: 35px;
-			color:black; text-align: center; margin: 0px;
+		body {
+			background-color: rgb(10,10,10);
 		}
-		.background {
-			position: absolute; width: 100%; height: 100%; top: 0px;
-			opacity: 0.1;
-			background: url('{% static 'res/vector/logo_bw_t.svg'%}');
-			background-repeat: no-repeat; background-position: center;
+		.block-article{
+			height: 100%; width: 100%; margin: 0px;
+			color: white; text-align: center; padding: 10px;
+		}
+		.block-media {
+			background-color: white; height: 100%;
+		}
+		.block-media img {
+			width: 80%; height: 80%;
 		}
 	</style>
 {% endblock %}
 
 
 {% block extra_content %}
-	<div class="background"></div>
+	<!-- <div class="background"></div>
 	<div class="d-flex justify-content-center">
 		<div class="col-md-8 block">
 			<img class="mx-auto d-block" src="{% static 'res/vector/seller.svg'%}">
 			<article>Sakkhat is providing a better platform for micro sellers. A meeting place for self service providers and their customers.</article>
+		</div>
+	</div> -->
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-6 block-article">
+				<article class="display-4">Sakkhat is providing a better platform for micro sellers. A meeting place for self service providers and their customers.</article>
+			</div>
+			<div class="col-md-6 block-media">
+				<img class="mx-auto d-block" src="{% static 'res/vector/seller.svg'%}">
+			</div>
 		</div>
 	</div>
 {% endblock %}
