--- a/templates/home/pages/feedback.html
+++ b/templates/home/pages/feedback.html
@@ -13,6 +13,9 @@
 			padding: 10px; 
 			width: 100%; height: 100%;
 		}
+		body {
+			background-color: rgb(10,10,10);
+		}
 	</style>
 {% endblock %}
 
@@ -20,13 +23,13 @@
 {% block extra_content %}
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-6 list-group-item bg-info text-white">
+			<div class="col-md-6 text-white mt-2">
 				<div class="media-block">
 					<img src="{% static 'res/vector/vote.svg' %}">
 				</div>
-				<h5 align="center">Help us to improve our service</h5>
+				<p align="center" class="display-4">Help us to improve our service</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 mt-2">
 				{% if sent %}
 					<h6 class="list-group-item list-group-item-success">Thanks for your feedback</h6>
 				{% endif %}
