--- a/templates/space/manage/create.html
+++ b/templates/space/manage/create.html
@@ -29,7 +29,7 @@
             <br>
             <div class="col-md-6 view mt-3">
                 <img src="{% static 'res/vector/trade.svg' %}">
-                <h1 class="text-white text-center mt-3">Your space, your management</h1>
+                <p class="text-white text-center display-4 mt-3">Your space, your management</p>
             </div>
             
         </div>
