--- a/templates/home/manage/index.html
+++ b/templates/home/manage/index.html
@@ -57,7 +57,8 @@
                             <img src="{{ product.logo_url }}">
                             <figcaption>
                                 <h5 class="title">{{ product.title }}</h5>
-                                <h6>{{ product.price }}</h6>
+                                <h6>{{ product.space.name }}</h6>
+                                <h6>@ {{ product.price }}</h6>
                                 <div>
                                     <button class="react-btn">
                                         <i class="em em---1"></i>
@@ -89,7 +90,8 @@
                             <img src="{{ product.logo_url }}">
                             <figcaption>
                                 <h5 class="title">{{ product.title }}</h5>
-                                <h6>{{ product.price }}</h6>
+                                <h6>{{ product.space.name }}</h6>
+                                <h6>@ {{ product.price }}</h6>
                                 <div>
                                     <button class="react-btn">
                                         <i class="em em---1"></i>
@@ -121,7 +123,8 @@
                             <img src="{{ product.logo_url }}">
                             <figcaption>
                                 <h5 class="title">{{ product.title }}</h5>
-                                <h6>{{ product.price }}</h6>
+                                <h6>{{ product.space.name }}</h6>
+                                <h6>@ {{ product.price }}</h6>
                                 <div>
                                     <button class="react-btn">
                                         <i class="em em---1"></i>
@@ -153,7 +156,8 @@
                             <img src="{{ product.logo_url }}">
                             <figcaption>
                                 <h5 class="title">{{ product.title }}</h5>
-                                <h6>{{ product.price }}</h6>
+                                <h6>{{ product.space.name }}</h6>
+                                <h6>@ {{ product.price }}</h6>
                                 <div>
                                     <button class="react-btn">
                                         <i class="em em---1"></i>
@@ -185,7 +189,8 @@
                             <img src="{{ product.logo_url }}">
                             <figcaption>
                                 <h5 class="title">{{ product.title }}</h5>
-                                <h6>{{ product.price }}</h6>
+                                <h6>{{ product.space.name }}</h6>
+                                <h6>@ {{ product.price }}</h6>
                                 <div>
                                     <button class="react-btn">
                                         <i class="em em---1"></i>
