--- a/staticfiles/css/home/manage/index.css
+++ b/staticfiles/css/home/manage/index.css
@@ -11,6 +11,11 @@
 body {
 	background-color: #E2E9EA;
 }
+
+.row-container {
+	min-width: 300px;
+	margin: 0px;
+}
 .row-header {
 	padding: 10px 5px;
 }
