--- a/templates/space/product/single.html
+++ b/templates/space/product/single.html
@@ -135,6 +135,7 @@
                             <img src="{{product.logo_url}}">
                             <figcaption>
                                 <h5 class="title">{{product.title}}</h5>
+                                <h6>{{product.space__name}}</h6>
                                 <h6>{{product.price}} TK</h6>
                                 <div>
                                     <button class="react-btn">
